--- a/express_demo/form_submit/index.html
+++ b/express_demo/form_submit/index.html
@@ -11,5 +11,10 @@
         Last Name: <input type="text" name='last_name' /><br>
         <input type="submit" value="SUBMIT">
     </form>
+    <form action="http://192.168.199.111:8084/process_post" method="post">
+        Birthday: <input type="text" name="birthday" /><br>
+        Age: <input type="text" name="age" /><br>
+        <input type="submit" value='提交'>
+    </form>
 </body>
 </html>
